@@ -4,20 +4,20 @@ MACROS=						\
   compiler-flags.m4				\
   curses.m4					\
   gnome-fileutils.m4				\
+  gnome-gettext.m4				\
   gnome-ghttp-check.m4				\
   gnome-gnorba-check.m4				\
   gnome-guile-checks.m4				\
   gnome-libgtop-check.m4			\
   gnome-objc-checks.m4				\
   gnome-orbit-check.m4				\
+  gnome-print-check.m4				\
   gnome-pthread-check.m4			\
   gnome-support.m4				\
   gnome-undelfs.m4				\
   gnome-vfs.m4					\
-  gnome-print-check.m4				\
   gnome-x-checks.m4				\
   gnome-xml-check.m4				\
-  gnome-gettext.m4				\
   gnome.m4					\
   linger.m4					\
   need-declaration.m4
